# ubirch-lights

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.cmake
sketches/: README.md
sketches/libraries/avrnacl-20140813/: config  config.in
sketches/libraries/avrnacl-20140813/avrnacl_8bitc/crypto_sign/: sc25519.c
sketches/libraries/avrnacl-20140813/avrnacl_fast/crypto_core/: salsa20.c  salsa_core.S
sketches/libraries/avrnacl-20140813/avrnacl_fast/crypto_onetimeauth/: red1305.S
sketches/libraries/avrnacl-20140813/avrnacl_fast/crypto_sign/: ge25519.c  sc25519.c
sketches/libraries/avrnacl-20140813/avrnacl_fast/include/: bigint.h
sketches/libraries/avrnacl-20140813/avrnacl_fast/shared/: bigint_add.S  bigint_add64.S  bigint_and64.S  bigint_mul.S  bigint_mul128.S  bigint_mul136.S  bigint_not64.S  bigint_rol64.S  bigint_ror64.S  bigint_shr64.S  bigint_sub.S  bigint_xor.S  bigint_xor64.S  fe25519.c  fe25519_add.S  fe25519_red.S  fe25519_sub.S
sketches/libraries/avrnacl-20140813/avrnacl_small/crypto_onetimeauth/: poly1305_core.S  red1305.S
sketches/libraries/avrnacl-20140813/avrnacl_small/shared/: bigint_mul.S  bigint_mul256.S  bigint_rol64.S  bigint_sub.S  bigint_xor.S  fe25519_add.S  fe25519_red.S  fe25519_sub.S
sketches/libraries/common/: avrsleep.c  avrsleep.h  freeram.c  freeram.h
sketches/libraries/i2c/: i2c.h  i2c_core.c  i2c_core.h  i2c_registers.c
sketches/libraries/isl29125/: isl29125.c  isl29125.h
sketches/lights-lamp/: CMakeLists.txt  config.h.template  lights-lamp.cpp
sketches/lights-sensor/: CMakeLists.txt  config.h.template  lights-sensor.cpp
sketches/weather-sensor/: CMakeLists.txt  weather-sensor.cpp
